force-app/main/default/objects/CampaignPriceDecay__c/CampaignPriceDecay__c.object-meta.xml
<CustomObject>
    <description>Reporting data for price decay of agreement lines as campaigns are created, and as user requested campaign line changes are created.</description>
    <label>CampaignPriceDecay</label>
    <nameField>
        <label>CampaignPriceDecay Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignPriceDecays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>