force-app/main/default/objects/CampaignPriceDecay__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <description>Date of processing.</description>
    <label>AsOfDate</label>
    <type>DateTime</type>
</CustomField>