force-app/main/default/objects/CampaignPriceDecay__c/fields/Blowout_Flag__c.field-meta.xml
<CustomField>
    <fullName>Blowout_Flag__c</fullName>
    <formula>OR(Historical_Sales_or_Historical_COGS__c ==1 , Camp_Profit_Change_100k__c == 1, GTM_Diff_60__c == 1, Zero_Future_Costs__c == 1, Camp_Cost_Change_50__c == 1, UOM_Does_Not_Match__c == TRUE,  Zero_Hist_Rev_or_Hist_COGs__c == 1,  Price_Increase_50__c == 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlier Flag</label>
    <type>Checkbox</type>
</CustomField>