force-app/main/default/objects/CampaignPriceDecay__c/fields/Camp_Cost_Change_50__c.field-meta.xml
<CustomField>
    <fullName>Camp_Cost_Change_50__c</fullName>
    <formula>if(CampCostChangePct__c &gt; 0.5, 1, if(CampCostChangePct__c &lt; -0.5, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camp Cost Change &gt;50%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>