force-app/main/default/objects/CampaignPriceDecay__c/fields/Camp_Profit_Change_100k__c.field-meta.xml
<CustomField>
    <fullName>Camp_Profit_Change_100k__c</fullName>
    <formula>IF(CampaignExpectedProfitLift__c &gt;100000, 1, if(CampaignExpectedProfitLift__c &lt;-100000,1,0))</formula>
    <label>Camp Profit Change&gt;100k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>