force-app/main/default/objects/CampaignPriceDecay__c/fields/Camp_Unit_Cost_Decreases__c.field-meta.xml
<CustomField>
    <fullName>Camp_Unit_Cost_Decreases__c</fullName>
    <formula>IF( UnitCostCampaignCreatedLine__c &lt; UnitCostPriorPublishLine__c ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Camp Unit Cost Decreases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>