force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignExpectedProfitLift__c.field-meta.xml
<CustomField>
    <fullName>CampaignExpectedProfitLift__c</fullName>
    <description>Expected profit lift using the campaign price.</description>
    <inlineHelpText>(COALESCE((c.CampaignLineUnitPrice / NULLIF(c.ParentLineUnitPrice, 0)) - 1, 0) * c.TTMRevenue) - (COALESCE((c.CampaignLineUnitCost / NULLIF(c.CostPriorToCampaign, 0)) - 1, 0) * (c.TTMRevenue - c.TTMProfit))</inlineHelpText>
    <label>CampaignExpectedProfitLift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>