force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignExpectedRevenueLift__c.field-meta.xml
<CustomField>
    <fullName>CampaignExpectedRevenueLift__c</fullName>
    <description>Expected revenue lift based on the campaign record price.</description>
    <label>CampExptd Rev Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>