force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignLinePriceUOM__c.field-meta.xml
<CustomField>
    <fullName>CampaignLinePriceUOM__c</fullName>
    <description>UOM of the campaign contract line</description>
    <label>CampaignLinePriceUOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>