force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignLineStartDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignLineStartDate__c</fullName>
    <description>The start date and time of the campaign line.  This value will be the campaign start date time when a campaign contract line exists.  This will be 1900-01-01 when there is no campaign contract line for the parent agreement line.</description>
    <label>CampaignLineStartDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>