force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignLineUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CampaignLineUnitPrice__c</fullName>
    <description>Campaign contract line unit price</description>
    <label>CampaignLineUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>