force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>Campaign name when it exists</description>
    <label>CampaignName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>