force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignPriceChange__c.field-meta.xml
<CustomField>
    <fullName>CampaignPriceChange__c</fullName>
    <description>Percent change in price from the parent agreement line value to the campaign line value.</description>
    <label>CampaignPriceChange</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>