force-app/main/default/objects/CampaignPriceDecay__c/fields/CampaignPriceDecayId__c.field-meta.xml
<CustomField>
    <fullName>CampaignPriceDecayId__c</fullName>
    <externalId>true</externalId>
    <label>CampaignPriceDecayId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>