force-app/main/default/objects/CampaignPriceDecay__c/fields/CampCostChangePct__c.field-meta.xml
<CustomField>
    <fullName>CampCostChangePct__c</fullName>
    <description>Campaign cost change percent</description>
    <inlineHelpText>(CampaignLineUnitCost / UnitCost Prior Published line) -1</inlineHelpText>
    <label>CampCostChangePct</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>