force-app/main/default/objects/CampaignPriceDecay__c/fields/CBSSItemGroupingKey__c.field-meta.xml
<CustomField>
    <fullName>CBSSItemGroupingKey__c</fullName>
    <description>CBSS Item Grouping Key</description>
    <label>CBSSItemGroupingKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>