force-app/main/default/objects/CampaignPriceDecay__c/fields/CBSSProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>CBSSProductHierarchy__c</fullName>
    <description>Class Brand Subset Set product hierarchy</description>
    <label>CBSSProductHierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>