force-app/main/default/objects/CampaignPriceDecay__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contract related to the price decay contract line</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>CampaignPriceDecays</relationshipLabel>
    <relationshipName>CampaignPriceDecays</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>