force-app/main/default/objects/CampaignPriceDecay__c/fields/CostPriorToCampaign__c.field-meta.xml
<CustomField>
    <fullName>CostPriorToCampaign__c</fullName>
    <description>Holds the contract line&apos;s prior cost before the campaign - two week&apos;s ago cost.  This field is loaded using the sync_registry mapping from zCloud.  The source field is CostPriorToCampaign.</description>
    <label>CostPriorToCampaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>