force-app/main/default/objects/CampaignPriceDecay__c/fields/Curr_GTM__c.field-meta.xml
<CustomField>
    <fullName>Curr_GTM__c</fullName>
    <formula>IF(CurrentLineUnitPrice__c = 0, 0, ( CurrentLineUnitPrice__c -  UnitCostPriorPublishLine__c )/ CurrentLineUnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curr GTM%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>