force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentCostChangePct__c.field-meta.xml
<CustomField>
    <fullName>CurrentCostChangePct__c</fullName>
    <description>Percent of cost change from the parent contract line to the user contract line.</description>
    <inlineHelpText>COALESCE((c.CampaignLineUnitCost / NULLIF(c.CostPriorToCampaign, 0)) - 1, 0)</inlineHelpText>
    <label>CurrentCostChangePct</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>