force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentExpectedProfitLift__c.field-meta.xml
<CustomField>
    <fullName>CurrentExpectedProfitLift__c</fullName>
    <description>Expected profit lift using the user contract line price.</description>
    <label>CurrentExpectedProfitLift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>