force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentExpectedRevenueLift__c.field-meta.xml
<CustomField>
    <fullName>CurrentExpectedRevenueLift__c</fullName>
    <description>Expected revenue lift using the user contract line price.</description>
    <label>CurrExptd Rev Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>