force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentLinePriceUOM__c.field-meta.xml
<CustomField>
    <fullName>CurrentLinePriceUOM__c</fullName>
    <description>User contract line UOM</description>
    <label>CurrentLinePriceUOM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>