force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentLineStartDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentLineStartDate__c</fullName>
    <description>Start date of the user contract line item record.  This will be 1900-01-01 when there is no user contract line item record.</description>
    <label>CurrentLineStartDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>