force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentLineUnitCost__c.field-meta.xml
<CustomField>
    <fullName>CurrentLineUnitCost__c</fullName>
    <description>User contract line unit cost</description>
    <label>CurrentLineUnitCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>