force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentLineUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CurrentLineUnitPrice__c</fullName>
    <description>User contract line unit price.</description>
    <label>CurrentLineUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>