force-app/main/default/objects/CampaignPriceDecay__c/fields/CurrentPriceChange__c.field-meta.xml
<CustomField>
    <fullName>CurrentPriceChange__c</fullName>
    <description>Percent price change from parent agreement line to the user contract line.</description>
    <label>CurrentPriceChange</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>