force-app/main/default/objects/CampaignPriceDecay__c/fields/CustomerMarginBin__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarginBin__c</fullName>
    <label>CustomerMarginBin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>