force-app/main/default/objects/CampaignPriceDecay__c/fields/CustomerProductImportance__c.field-meta.xml
<CustomField>
    <fullName>CustomerProductImportance__c</fullName>
    <description>Customer product importance value</description>
    <label>CustomerProductImportance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>