force-app/main/default/objects/CampaignPriceDecay__c/fields/CustomerSpendBin__c.field-meta.xml
<CustomField>
    <fullName>CustomerSpendBin__c</fullName>
    <description>Customer spend bin</description>
    <label>CustomerSpendBin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>