force-app/main/default/objects/CampaignPriceDecay__c/fields/GTM_Diff_60__c.field-meta.xml
<CustomField>
    <fullName>GTM_Diff_60__c</fullName>
    <formula>IF( GTM_Diff__c &gt;0.6, 1, IF( GTM_Diff__c &lt;-0.6,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GTM Diff &gt; 60%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>