force-app/main/default/objects/CampaignPriceDecay__c/fields/GTM_Diff__c.field-meta.xml
<CustomField>
    <fullName>GTM_Diff__c</fullName>
    <formula>Recomm_GTM__c - Curr_GTM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GTM% Diff</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>