force-app/main/default/objects/CampaignPriceDecay__c/fields/Historical_COGS__c.field-meta.xml
<CustomField>
    <fullName>Historical_COGS__c</fullName>
    <formula>TTMRevenue__c - TTMProfit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Historical COGS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>