force-app/main/default/objects/CampaignPriceDecay__c/fields/Historical_GTM__c.field-meta.xml
<CustomField>
    <fullName>Historical_GTM__c</fullName>
    <formula>IF( TTMRevenue__c=0,0,( TTMRevenue__c - Historical_COGS__c )/ TTMRevenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Historical GTM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>