force-app/main/default/objects/CampaignPriceDecay__c/fields/Historical_Sales_or_Historical_COGS__c.field-meta.xml
<CustomField>
    <fullName>Historical_Sales_or_Historical_COGS__c</fullName>
    <formula>IF(OR( TTMRevenue__c &lt; CampaignExpectedRevenueLift__c, Historical_COGS__c &lt; CampaignExpectedRevenueLift__c ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hist Sales or Hist COGS &lt; Sales Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>