force-app/main/default/objects/CampaignPriceDecay__c/fields/HistSales_CampExpRevLift__c.field-meta.xml
<CustomField>
    <fullName>HistSales_CampExpRevLift__c</fullName>
    <formula>IF( Historical_Sales_or_Historical_COGS__c &lt; CampaignExpectedRevenueLift__c, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HistSales&lt;CampExpRevLift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>