force-app/main/default/objects/CampaignPriceDecay__c/fields/LineLevelId__c.field-meta.xml
<CustomField>
    <fullName>LineLevelId__c</fullName>
    <description>Line level id of the contract line</description>
    <label>LineLevelId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>