force-app/main/default/objects/CampaignPriceDecay__c/fields/MarginCampaignCreatedLine__c.field-meta.xml
<CustomField>
    <fullName>MarginCampaignCreatedLine__c</fullName>
    <description>Margin on the campaign created contract line</description>
    <label>MarginCampaignCreatedLine</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>