force-app/main/default/objects/CampaignPriceDecay__c/fields/MarginPriorPublishLine__c.field-meta.xml
<CustomField>
    <fullName>MarginPriorPublishLine__c</fullName>
    <description>Parent agreement line margin</description>
    <label>MarginPriorPublishLine</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>