force-app/main/default/objects/CampaignPriceDecay__c/fields/MarginUserCreatedLine__c.field-meta.xml
<CustomField>
    <fullName>MarginUserCreatedLine__c</fullName>
    <description>Margin on the user created contract line</description>
    <label>MarginUserCreatedLine</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>