force-app/main/default/objects/CampaignPriceDecay__c/fields/Price_Increase_50__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_50__c</fullName>
    <formula>IF( CurrentPriceChange__c &gt;0.50, 1, if( CurrentPriceChange__c &lt;-0.50,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Increase &gt; 50%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>