force-app/main/default/objects/CampaignPriceDecay__c/fields/PricingRemoved__c.field-meta.xml
<CustomField>
    <fullName>PricingRemoved__c</fullName>
    <description>If the user deletes the campaign created line, then set a flag.</description>
    <label>PricingRemoved</label>
    <length>10</length>
    <type>Text</type>
</CustomField>