force-app/main/default/objects/CampaignPriceDecay__c/fields/PriorPublishUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>PriorPublishUnitPrice__c</fullName>
    <description>Parent agreement line unit price.</description>
    <label>PriorPublishUnitPrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>