force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl1Code__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl1Code__c</fullName>
    <description>Product category level 1 code</description>
    <label>ProdCatLvl1Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>