force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl1Name__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl1Name__c</fullName>
    <description>Product category level 1 name</description>
    <label>ProdCatLvl1Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>