force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl2Code__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl2Code__c</fullName>
    <description>Product category level 2 code</description>
    <label>ProdCatLvl2Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>