force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl2Name__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl2Name__c</fullName>
    <description>Product category level 2 name</description>
    <label>ProdCatLvl2Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>