force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl3Code__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl3Code__c</fullName>
    <description>Product category level 3 code</description>
    <label>ProdCatLvl3Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>