force-app/main/default/objects/CampaignPriceDecay__c/fields/ProdCatLvl3Name__c.field-meta.xml
<CustomField>
    <fullName>ProdCatLvl3Name__c</fullName>
    <description>Product category level 3 name</description>
    <label>ProdCatLvl3Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>