force-app/main/default/objects/CampaignPriceDecay__c/fields/ProductCatLevel1__c.field-meta.xml
<CustomField>
    <fullName>ProductCatLevel1__c</fullName>
    <description>Product category level 1</description>
    <label>ProductCatLevel1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>