force-app/main/default/objects/CampaignPriceDecay__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>Product id</description>
    <label>ProductId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>