force-app/main/default/objects/CampaignPriceDecay__c/fields/ProfitAcceptanceRate__c.field-meta.xml
<CustomField>
    <fullName>ProfitAcceptanceRate__c</fullName>
    <description>Profit acceptance rate</description>
    <label>ProfitAcceptanceRate</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>