force-app/main/default/objects/CampaignPriceDecay__c/fields/PublishDate__c.field-meta.xml
<CustomField>
    <fullName>PublishDate__c</fullName>
    <description>Publish date of the last contract line record</description>
    <label>PublishDate</label>
    <type>DateTime</type>
</CustomField>