force-app/main/default/objects/CampaignPriceDecay__c/fields/Recomm_GTM__c.field-meta.xml
<CustomField>
    <fullName>Recomm_GTM__c</fullName>
    <formula>IF(CampaignLineUnitPrice__c == 0, 0, ( CampaignLineUnitPrice__c - UnitCostCampaignCreatedLine__c )/ CampaignLineUnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recomm GTM%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>