force-app/main/default/objects/CampaignPriceDecay__c/fields/RecordSource__c.field-meta.xml
<CustomField>
    <fullName>RecordSource__c</fullName>
    <description>Source of the record.  Server name and program.</description>
    <label>RecordSource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>