force-app/main/default/objects/CampaignPriceDecay__c/fields/Rejected_Profit_Lift__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Profit_Lift__c</fullName>
    <description>Rejected Profit Lift for reporting.</description>
    <formula>CampaignExpectedProfitLift__c -  CurrentExpectedProfitLift__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected Profit Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>