force-app/main/default/objects/CampaignPriceDecay__c/fields/RejectedProfitLift__c.field-meta.xml
<CustomField>
    <fullName>RejectedProfitLift__c</fullName>
    <description>Rejected profit lift</description>
    <label>RejectedProfitLift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>