force-app/main/default/objects/CampaignPriceDecay__c/fields/RejectedRevenueLift__c.field-meta.xml
<CustomField>
    <fullName>RejectedRevenueLift__c</fullName>
    <description>Rejected revenue lift</description>
    <label>Reject Rev Lift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>