force-app/main/default/objects/CampaignPriceDecay__c/fields/RevenueAcceptanceRate__c.field-meta.xml
<CustomField>
    <fullName>RevenueAcceptanceRate__c</fullName>
    <description>Revenue acceptance rate</description>
    <label>RevenueAcceptanceRate</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>