force-app/main/default/objects/CampaignPriceDecay__c/fields/SegmentCode__c.field-meta.xml
<CustomField>
    <fullName>SegmentCode__c</fullName>
    <description>Segment code</description>
    <label>SegmentCode</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>