force-app/main/default/objects/CampaignPriceDecay__c/fields/SysAcctId__c.field-meta.xml
<CustomField>
    <fullName>SysAcctId__c</fullName>
    <description>Customer id</description>
    <label>SysAcctId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>