force-app/main/default/objects/CampaignPriceDecay__c/fields/TTMMargin__c.field-meta.xml
<CustomField>
    <fullName>TTMMargin__c</fullName>
    <description>Trailing twelve month margin percent</description>
    <label>TTMMargin</label>
    <precision>16</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>