force-app/main/default/objects/CampaignPriceDecay__c/fields/TTMProfit__c.field-meta.xml
<CustomField>
    <fullName>TTMProfit__c</fullName>
    <description>Trailing twelve month profit</description>
    <label>TTMProfit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>