force-app/main/default/objects/CampaignPriceDecay__c/fields/TTMRevenue__c.field-meta.xml
<CustomField>
    <fullName>TTMRevenue__c</fullName>
    <description>Trailing twelve months of revenue</description>
    <label>TTMRevenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>