force-app/main/default/objects/CampaignPriceDecay__c/fields/UnitCostCampaignCreatedLine__c.field-meta.xml
<CustomField>
    <fullName>UnitCostCampaignCreatedLine__c</fullName>
    <description>Unit cost on the campaign contract line</description>
    <label>UnitCostCampaignCreatedLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>