force-app/main/default/objects/CampaignPriceDecay__c/fields/UnitCostPriorPublishLine__c.field-meta.xml
<CustomField>
    <fullName>UnitCostPriorPublishLine__c</fullName>
    <description>Parent agreement line unit cost</description>
    <label>UnitCostPriorPublishLine</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>