force-app/main/default/objects/CampaignPriceDecay__c/fields/UnitCostUserCreatedLine__c.field-meta.xml
<CustomField>
    <fullName>UnitCostUserCreatedLine__c</fullName>
    <description>Unti cost of the user created contract line</description>
    <label>UnitCostUserCreatedLine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>