force-app/main/default/objects/CampaignPriceDecay__c/fields/UOM_Does_Not_Match__c.field-meta.xml
<CustomField>
    <fullName>UOM_Does_Not_Match__c</fullName>
    <formula>IF( CurrentLinePriceUOM__c &lt;&gt; CampaignLinePriceUOM__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM Does Not Match</label>
    <type>Checkbox</type>
</CustomField>