force-app/main/default/objects/CampaignPriceDecay__c/fields/VendorCode__c.field-meta.xml
<CustomField>
    <fullName>VendorCode__c</fullName>
    <description>Product vendor code</description>
    <label>VendorCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>