force-app/main/default/objects/CampaignPriceDecay__c/fields/VendorName__c.field-meta.xml
<CustomField>
    <fullName>VendorName__c</fullName>
    <description>Product vendor name</description>
    <label>VendorName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>