force-app/main/default/objects/CampaignPriceDecay__c/fields/Zero_Future_Costs__c.field-meta.xml
<CustomField>
    <fullName>Zero_Future_Costs__c</fullName>
    <formula>IF( UnitCostCampaignCreatedLine__c =0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zero Future Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>