force-app/main/default/objects/CampaignPriceDecay__c/fields/Zero_Hist_Rev_or_Hist_COGs__c.field-meta.xml
<CustomField>
    <fullName>Zero_Hist_Rev_or_Hist_COGs__c</fullName>
    <formula>if( TTMRevenue__c == 0, 1, if(Historical_COGS__c  == 0,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zero Hist Rev or Hist COGs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>