force-app/main/default/objects/CampaignPriceDecay__c/fields/zver_Action__c.field-meta.xml
<CustomField>
    <fullName>zver_Action__c</fullName>
    <formula>IF(CurrentLineUnitPrice__c=CampaignLineUnitPrice__c,&quot;Accepted&quot;,IF(CurrentLineUnitPrice__c&gt;CampaignLineUnitPrice__c,&quot;Accepted &gt;  Recomm&quot;,IF(CurrentLineUnitPrice__c=PriorPublishUnitPrice__c,&quot;Rejected&quot;,IF(CurrentLineUnitPrice__c&lt;PriorPublishUnitPrice__c,&quot;Rejected &lt; Original&quot;,&quot;Accepted - Partial&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>